static/frontend/unit: fix "Jump to .." vertical alignment
Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/357031
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/static/frontend/unit/main/_outline.css
+++ b/static/frontend/unit/main/_outline.css
@@ -9,6 +9,7 @@
   margin-bottom: 1rem;
 }
 .UnitOutline-jumpTo button {
+  align-items: center;
   background-color: var(--color-background);
   border: var(--border);
   border-radius: 0.25rem;
